# jumpstart

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  sonar-project.properties  ty.toml
.github/workflows/: sonarqube.yml
docs/: index.md
docs/core/: CSH Calendar.md  Slack.md  csh_calendar.md  slack.md  wikithoughts.md
docs/endpoints/: announcements.md  calendar_endpoint.md  csh_calendar.md  endpoints.md  slack_bot.md  wikithoughts.md
docs/getting-started/: getting-started.md
docs/images/: .~lock.jumpstart.png#
jumpstart/: __init__.py
src/: config.py  main.py  requirements.txt
src/api/: endpoints.py
src/core/: calendar.py  cshcalendar.py  google.py  slack.py  wikithoughts.py
src/core/cshcalendar/: __init__.py
src/static/css/: style.css
src/static/js/: main.js
src/static/slack/: dm_request_template.json
src/templates/: base.html  index.html
tests/: conftest.py
tests/src/: test_config.py
tests/src/core/: test_slack.py
